# magnifying_glass

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/cpp/: glass.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bavagnoli/magnifying_glass/: MagnifyingGlassPlugin.java
android/src/main/kotlin/com/bavagnoli/magnifying_glass/: MagnifyingGlassPlugin.kt
example/: .metadata  README.md  pubspec.yaml
example/android/: build.gradle
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: magnifying_glass.podspec
ios/Classes/: MagnifyingGlassPlugin.h  MagnifyingGlassPlugin.m  MagnifyingGlassPlugin.swift  SwiftMagnifyingGlassPlugin.swift  glass.cpp
lib/: magnifying_glass.dart  magnifying_glass_web.dart
lib/src/: bmp_header.dart  glass.dart  interface.dart  magnifying_glass.dart  pinch_barrel.dart
linux/: CMakeLists.txt  magnifying_glass_plugin.cc  magnifying_glass_plugin_private.h
linux/test/: magnifying_glass_plugin_test.cc
macos/: magnifying_glass.podspec
macos/Classes/: MagnifyingGlassPlugin.swift
test/: magnifying_glass_method_channel_test.dart  magnifying_glass_test.dart
windows/: CMakeLists.txt  magnifying_glass_plugin.cpp  magnifying_glass_plugin.h  magnifying_glass_plugin_c_api.cpp
windows/test/: magnifying_glass_plugin_test.cpp
(+22 files in other folders)
